tests/type_tests/negatives/maybe_pure.py
from pfun import Just, Maybe


def test() -> Maybe[int]:
    return Just('test')
